src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__launch_confirm_80x24.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔════════════════════════════[ Step 5/8: Confirm ]═════════════════════════════╗"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"╔═════════════════════════════════[ Confirm ]══════════════════════════════════╗"
"║Ready to launch.                                                              ║"
"║Team: default-coder                                                           ║"
"║                                                                              ║"
"║[Enter] confirm   [Esc] back                                                  ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"                           [Enter] launch   [Esc] back                          "
"                                                                                "
