src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__launch_executing_80x24.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔═══════════════════════════[ Step 6/8: Executing ]════════════════════════════╗"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"╔════════════════════════════════[ Executing ]═════════════════════════════════╗"
"║                                                                              ║"
"║                             Dispatching team run…                            ║"
"║                                                                              ║"
"║                            Press Enter to return.                            ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"                                  Dispatching…                                  "
"                                                                                "
