src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__launch_failed_80x24.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔═════════════════════════[ Step 7/7: Launch Failed ]══════════════════════════╗"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"╔══════════════════════════════[ Launch Failed ]═══════════════════════════════╗"
"║                                                                              ║"
"║                                dispatch error                                ║"
"║                                                                              ║"
"║                            Press Enter to return.                            ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"                             [r] retry   [Esc] back                             "
"                                                                                "
