src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__launch_input_preselect_60x20.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔═══════════════════[ Step 2/8: Input ]════════════════════╗"
"║                                                          ║"
"╚══════════════════════════════════════════════════════════╝"
"╔════════════════════════[ Input ]═════════════════════════╗"
"║Pre-selected: issue #42 — feat: login                     ║"
"║                                                          ║"
"║Choose input kind                                         ║"
"║ > Issue                                                  ║"
"║   IssueSet                                               ║"
"║   Milestone                                              ║"
"║   IdeaInbox                                              ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"║                                                          ║"
"╚══════════════════════════════════════════════════════════╝"
"       [↑/↓ j/k] pick   [Enter] continue   [Esc] back       "
"                                                            "
