src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__launch_issue_picker_80x24.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔══════════════════════════[ Step 3/8: Issue Number ]══════════════════════════╗"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"╔═══════════════════════════════[ Issue Number ]═══════════════════════════════╗"
"║Enter the issue number (digits only)                                          ║"
"║                                                                              ║"
"║>                                                                             ║"
"║                                                                              ║"
"║[Enter] continue   [Esc] back                                                 ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"                              Enter an issue number                             "
"        [digits] type   [Backspace] erase   [Enter] continue   [Esc] back       "
