src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__launch_issue_picker_autocomplete_80x24.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔══════════════════════════[ Step 3/8: Issue Number ]══════════════════════════╗"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"╔═══════════════════════════════[ Issue Number ]═══════════════════════════════╗"
"║Enter issue number — paste with Ctrl+V or pick from suggestions               ║"
"║                                                                              ║"
"║> 1                                                                           ║"
"║                                                                              ║"
"║Suggestions:                                                                  ║"
"║ > #1                                                                         ║"
"║   #10                                                                        ║"
"║   #12                                                                        ║"
"║   #100                                                                       ║"
"║   #101                                                                       ║"
"║                                                                              ║"
"║[Ctrl+V] paste   [↑/↓] suggest   [Tab] accept   [Enter] continue   [Esc] back ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"[digits] type   [Ctrl+V] paste   [↑/↓] suggest   [Tab] accept   [Enter] continue"
"                                                                                "
