src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__launch_plan_preview_blocked_role_80x24.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔══════════════════════════════[ Step 4/8: Plan ]══════════════════════════════╗"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"╔═══════════════════════════════[ Plan Preview ]═══════════════════════════════╗"
"║Team partial (pipeline)  ≈ $0.0258 (rough estimate, ±50%)                     ║"
"║Level 0: #1                                                                   ║"
"║Concurrency: max 3 parallel                                                   ║"
"║                                                                              ║"
"║Pre-flight failures:                                                          ║"
"║✗ Missing binding for role: implementer                                       ║"
"║✗ Missing binding for role: reviewer                                          ║"
"║✗ Missing binding for role: docs                                              ║"
"║Confirm disabled until pre-flight passes.                                     ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"                        Pre-flight failed — fix blockers                        "
"                          [Enter] confirm   [Esc] back                          "
