src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__launch_plan_preview_green_80x24.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔══════════════════════════════[ Step 4/8: Plan ]══════════════════════════════╗"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"╔═══════════════════════════════[ Plan Preview ]═══════════════════════════════╗"
"║Team default-coder (pipeline)  ≈ $0.0258 (rough estimate, ±50%)               ║"
"║Level 0: #42                                                                  ║"
"║Concurrency: max 3 parallel                                                   ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"                          [Enter] confirm   [Esc] back                          "
"                                                                                "
