src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__team_wizard__launch_plan_preview_open_external_80x24.snap
---
source: src/tui/snapshot_tests/team_wizard.rs
expression: t.backend()
---
"╔══════════════════════════════[ Step 4/8: Plan ]══════════════════════════════╗"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"╔═══════════════════════════════[ Plan Preview ]═══════════════════════════════╗"
"║Team default-coder (pipeline)  ≈ $0.0258 (rough estimate, ±50%)               ║"
"║Level 0: #1                                                                   ║"
"║Concurrency: max 3 parallel                                                   ║"
"║                                                                              ║"
"║Pre-flight failures:                                                          ║"
"║✗ Issue #1 blocked by open external #2                                        ║"
"║Confirm disabled until pre-flight passes.                                     ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"                        Pre-flight failed — fix blockers                        "
"                          [Enter] confirm   [Esc] back                          "
